--- a/about-us.html
+++ b/about-us.html
@@ -147,8 +147,8 @@
               </div><!-- /.col-lg-12 -->
               <div class="col-sm-12 col-md-12 col-lg-12">
                 <p class="heading__desc mb-30">Shreya Life Sciences is a state-of-the-art pharmaceutical organisation involved in research, manufacturing and distribution of medicinal formulations and products.</p>
-                <p>Beginning its journey in 1995 in Russia, Shreya Life Sciences started as a pharmaceutical distributing and marketing company. In the course of over two decades, Shreya Life Sciences has pioneered innovations and achieved milestones in acquiring new companies, commissioning new products as well as expanding its market & contract manufacturing presence w/ reach and operations in Russia, CIS countries, South East Asia, Africa, and Latin America.</p>
-                <p>Our success comes from distinguished expertise, processes, and partners in developing formulations and paving the way forward. It is their dedication and efforts towards innovation and development that keep us moving forward.</p>
+                <p>Beginning its journey in 1995 in Russia, Shreya Life Sciences started as a pharmaceutical distributing and marketing company, in the course of over two decades, Shreya Life Sciences has pioneered innovations and achieved milestones in acquiring new companies, commissioning new products as well as expanding its markets (both Domestic & Overseas) & also venturing in contract manufacturing activities. Now its presence and reach are in Russia, CIS countries, South East Asia, Africa, and Latin America</p>
+                <p>Success at SHREYA comes from distinguished expertise, processes, and partners in developing formulations and paving the way forward. All stake holders at Shreya, be it suppliers, clients or distributors are considered as a part of Large SHREYA Family and grow together.</p>
                 <!-- <img src="assets/images/about/singnture.png" alt="singnture" class="signature mb-30"> -->
               </div><!-- /.col-lg-7 -->
             </div><!-- /.row -->
