--- a/antibiotics.html
+++ b/antibiotics.html
@@ -116,11 +116,11 @@
           <div class="col-sm-12 col-md-12 col-lg-12">
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Products</li>
+                <li class="breadcrumb-item"><a href="product.html">Products</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Antibiotics</li>
               </ol>
             </nav>
-            <h1 class="pagetitle__heading">Products</h1>
+            <h1 class="pagetitle__heading">Antibiotics</h1>
           </div><!-- /.col-lg-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -343,10 +343,55 @@
         <th class="mobile-header">Market rate</th><td>Vial + WFI 0.75 g</td>
       </tr>
       <tr>
-        <td>CEFERA-S 750</td>
+        <td>CEFERA-T 250</td>
+        <th class="mobile-header">Number</th><td>Each vial contains  <br>
+          Ceftriaxone Sodium IP equ. to Ceftriaxone 	250mg <br> Tazobactum Sodium equ. to Tazobactum 	31.25mg </td>
+        <th class="mobile-header">Market rate</th><td>Vial + WFI</td>
+      </tr>
+      <tr>
+        <td>CEFERA-T 500</td>
         <th class="mobile-header">Number</th><td>Each vial contains <br>
-            Ceftriaxone Sodium IP equ.to Ceftriaxone 	500 mg <br> Sulbactum Sodium USP equ. to Sulbactum  	250mg </td>
-        <th class="mobile-header">Market rate</th><td>Vial + WFI 0.75 g</td>
+          Ceftriaxone Sodium IP equ. to Ceftriaxone <br>	500mg Tazobactum Sodium equ.. to Tazobactum 	62.5mg</td>
+        <th class="mobile-header">Market rate</th><td>Vial + WFI  562.5 mg</td>
+      </tr>
+      <tr>
+        <td>Cefera T 1000</td>
+        <th class="mobile-header">Number</th><td>Each vial contains <br>
+          Ceftriaxone Sodium IP equ.to Ceftriaxone 	1g <br>
+          Tazobactam Sodium equ. to Tazobactam	125mg</td>
+        <th class="mobile-header">Market rate</th><td>Vial + WFI 1125 mg</td>
+      </tr>
+      <tr>
+        <td>Cefera-O</td>
+        <th class="mobile-header">Number</th><td>Each film coated tablet contains  <br>
+          Cefpodoxime Proxetil IP equ. to Cefpodoxime            	200 mg <br>
+          Ofloxacin I.P.                        			200 mg</td>
+        <th class="mobile-header">Market rate</th><td>10 x 10s</td>
+      </tr>
+      <tr>
+        <td>DESATAX VIAL 1000</td>
+        <th class="mobile-header">Number</th><td>Each vial contains : <br>
+          Cefotaxime Sodium  I.P. equ.. to Cefotaxime 	1000mg</td>
+        <th class="mobile-header">Market rate</th><td>10 x 10s</td>
+      </tr>
+      <tr>
+        <td>DESATAX 500</td>
+        <th class="mobile-header">Number</th><td>Each vial contains :   <br>
+          Cefotaxime Sodium  I.P. equ. to Cefotaxime 	500mg</td>
+        <th class="mobile-header">Market rate</th><td>10 x 10s</td>
+      </tr>
+      <tr>
+        <td>DESATAX 250</td>
+        <th class="mobile-header">Number</th><td>Each vial contains : <br>
+          Cefotaxime Sodium  I.P. eq. to Cefotaxime	250mg</td>
+        <th class="mobile-header">Market rate</th><td>10 x 10s</td>
+      </tr>
+      <tr>
+        <td>DESATAX XL</td>
+        <th class="mobile-header">Number</th><td>Each tablet contains : <br>
+          Cefixime I.P. eq. to Cefixime 			200 mg  <br>
+          Dicloxacillin Sodium I.P. (ER)  equ.to Dicloxacillin 	500 mg</td>
+        <th class="mobile-header">Market rate</th><td>10 x 10's</td>
       </tr>
     <!-- <tr class='total'>
       <th>Total</th>
