--- a/business-development.html
+++ b/business-development.html
@@ -137,7 +137,7 @@
             <div class="inner-padding">
               <div class="heading heading-2 mb-50">
                 <h2 class="heading__title color-black">Contract Manufacturing:</h2>
-                <p class="heading__desc color-black">Armed with more than 20+ years of industry expertise, we, at Shreya Life Science, collaborate with pharmaceutical marketing firms on a contract basis to produce and supply formulations, APIs and various medicinal drugs at scale. <br><br>
+                <p class="heading__desc color-black">Armed with more than 20+ years of industry expertise, at SHREYA, BD activities consists of various areas of operations such as Contract Manfuacture, Sourcing of new Molecules, In and out licensing of products, New alliances and Hospital Supplies of products on need base. <br><br>
                     Our state-of-the-art manufacturing facility is IRA approved while our new facilities are in the process of approval from the European Regulatory Body. <br><br>
                     Currently, our illustrious portfolio of clients include globally recognised firms like Lupin, Sun Pharma, Cadila, Piramal and Glenmark among others. <br><br>
                     Our international collaborations are lined up with companies from Ukraine, Ethiopia, and Zimbabwe.
