--- a/export.html
+++ b/export.html
@@ -305,8 +305,7 @@
                   <div class="heading heading-3 mb-50">
                     <!-- <span class="heading__subtitle"></span> -->
                     <!-- <h2 class="heading__title">Our Entire Scope of International Exports</h2> -->
-                    <p class="heading__desc">At Shreya Life Science, we take pride in our extensive Sales and Marketing set up. At the domestic level, the Shreya Group markets through 3 separate SBUs.
-                    </p>
+                    <p class="heading__desc">At Shreya Life Science, there exists extensive Sales and Marketing set up. At the domestic level, the Shreya Group markets through two 3 separate SBUs.</p>
                     <div class="list-style-2 pt-20">
                         <ul>
                             <li><i class="fa fa-chevron-right"></i><p> Amadeus </p></li>
