--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
                   </div><!-- /.fancybox-icon -->
                   <div class="fancybox__content">
                     <h4 class="fancybox__title">Our Mission</h4>
-                    <p class="fancybox__desc">To be amongst the top 25 Pharmaceutical companies of India by the year
-                      2021-22 and to achieve this objective through both organic and inorganic growth.</p>
+                    <p class="fancybox__desc">To be amongst the top 25 Pharmaceutical companies of India and to achieve this objective, through both organic and inorganic growth.</p>
                   </div><!-- /.fancybox-content -->
                 </div><!-- /.fancybox-item -->
                 <div class="fancybox-item">
@@ -222,13 +221,8 @@
                 </div><!-- /.fancybox-item -->
               </div><!-- /.col-lg-5 -->
               <div class="col-sm-12 col-md-7 col-lg-7">
-                <p class="heading__desc mb-30">Shreya Life Sciences is a state-of-the-art pharmaceutical organisation
-                  involved in research, manufacturing and distribution of medicinal formulations and products.</p>
-                <p class="text-justify">Beginning its journey in 1995 in Russia, Shreya Life Sciences started as a
-                  pharmaceutical distributing and marketing company. In the course of over two decades, Shreya Life
-                  Sciences has pioneered innovations and achieved milestones in commissioning new product lines &
-                  formulations, clinical studies as well as contract manufacturing. It now boasts of a global presence
-                  with operations in Russia, CIS countries, South East Asia, Africa, and Latin America.</p>
+                <p class="heading__desc mb-30">Shreya Life Sciences is a state-of-the-art Pharmaceutical Organisation involved in Research, Manufacturing, Marketing, Sales and Distribution of Medicinal Formulations and Products.</p>
+                <p class="text-justify">Beginning its journey in 1995 in Russia, Shreya Life Sciences started as a pharmaceutical distributing and marketing company. In the course of over two decades, Shreya Life Sciences has pioneered innovations and achieved milestones in acquisition of companies /Brands, commissioning new product lines & formulations, Market  expansion, clinical studies as well as contract manufacturing. It now boasts of a global presence with operations in Russia, CIS countries, South East Asia, Africa, and Latin American countries.</p>
                 <!-- <img src="assets/images/about/singnture.png" alt="singnture" class="signature mb-30"> -->
               </div><!-- /.col-lg-7 -->
             </div><!-- /.row -->
@@ -253,10 +247,10 @@
             <!-- <span class="heading__subtitle">Services We Offer</span> -->
           </div><!-- /.col-lg-12 -->
           <div class="col-sm-12 col-md-12 col-lg-12">
-            <h2 class="heading__title">Our Team members</h2>
-            <p class="heading__desc">Our global logistics expertise, advanced supply chain technology & customized
+            <h2 class="heading__title">Core Team</h2>
+            <!-- <p class="heading__desc">Our global logistics expertise, advanced supply chain technology & customized
               logistics solutions will help you analyze, develop and implement successful supply chain management
-              strategies.</p>
+              strategies.</p> -->
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
         <div class="row">
