--- a/leadership-team.html
+++ b/leadership-team.html
@@ -169,60 +169,12 @@
                   <h4 class="text-dark">Mr. Sujit Kumar Singh</h4>
                   <span class="text-dark">Founder, Shreya Life Sciences</span>
                   <br><br>
-                <p class="text-dark">Mr. Sujit Kumar Singh comes from a pharmaceutical background, earning his degree of medicine in Russia. From there started a small business of trading and distribution of pharmaceutical formulations, that went on to become Shreya Life Sciences as a pharma trading company in the next 5 years. For his contributions to the industry, he was awarded the Rajiv Gandhi Young Entrepreneur Award in 2008.</p>
+                <p class="text-dark">Mr. Sujit Kumar Singh comes from an humble Rural background of India and Represents the First Generation Entrepreneurship. What started as a single man trading operation at any ager of about 19 years, has now become Shreya Life Sciences in the next five years. For his contributions to the industry, he was awarded the Rajiv Gandhi Young Entrepreneur Award in 2008.</p>
         </div>
         </div>
 
         <div class="row text-center">
-          <!-- Member #1 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="member">
-              <div class="member__img">
-                <img src="assets/img/team/shekhar.jpg" alt="member img">
-                <div class="member__hover">
-                  <div class="member__content-inner">
-                  </div><!-- /.member-content-inner -->
-                </div><!-- /.member-hover -->
-              </div><!-- /.member-img -->
-              <div class="member__info">
-                <h5 class="member__name">Shekhar Singh</h5>
-                <p class="member__desc">Head & CEO – Russia Operations</p>
-              </div><!-- /.member-info -->
-            </div><!-- /.member -->
-          </div><!-- /.col-lg-4 -->
-          <!-- Member #1 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="member">
-              <div class="member__img">
-                <img src="assets/img/team/Chandrasekaran.jpg" alt="member img">
-                <div class="member__hover">
-                  <div class="member__content-inner">
-                  </div><!-- /.member-content-inner -->
-                </div><!-- /.member-hover -->
-              </div><!-- /.member-img -->
-              <div class="member__info">
-                <h5 class="member__name">Dr. K. Chandrasekaran</h5>
-                <p class="member__desc">Head - Business Development</p>
-              </div><!-- /.member-info -->
-            </div><!-- /.member -->
-          </div><!-- /.col-lg-4 -->
-          <!-- Member #1 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="member">
-              <div class="member__img">
-                <img src="assets/img/team/Avinash.jpg" alt="member img">
-                <div class="member__hover">
-                  <div class="member__content-inner">
-                  </div><!-- /.member-content-inner -->
-                </div><!-- /.member-hover -->
-              </div><!-- /.member-img -->
-              <div class="member__info">
-                <h5 class="member__name">Avanish Sharma</h5>
-                <p class="member__desc">Head- Emerging & ROW Markets</p>
-              </div><!-- /.member-info -->
-            </div><!-- /.member -->
-          </div><!-- /.col-lg-4 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-4">
             <div class="member">
               <div class="member__img">
                 <img src="assets/img/team/hemanshu.jpg" alt="member img">
@@ -238,43 +190,55 @@
               </div><!-- /.member-info -->
             </div><!-- /.member -->
           </div><!-- /.col-lg-4 -->
-        </div>
-
-        <div class="row text-center">
-          <!-- Member #1 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-4">
             <div class="member">
               <div class="member__img">
-                <img src="assets/img/team/akhilesh.jpg" alt="member img">
+                <img src="assets/img/team/saul.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
               <div class="member__info">
-                <h5 class="member__name">Mr. Akhilesh Jain</h5>
-                <p class="member__desc">Head, Corporte Affairs</p>
+                <h5 class="member__name">Marian Chris</h5>
+                <p class="member__desc">Global Sales</p>
               </div><!-- /.member-info -->
             </div><!-- /.member -->
           </div><!-- /.col-lg-4 -->
-          <!-- Member #2 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
+          <!-- Member #1 -->
+          <div class="col-sm-6 col-md-4 col-lg-4">
             <div class="member">
               <div class="member__img">
-                <img src="assets/img/team/anil.jpg" alt="member img">
+                <img src="assets/img/team/shekhar.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
               <div class="member__info">
-                <h5 class="member__name">Mr. Anil Kumar Mishra </h5>
-                <p class="member__desc">Head, HR & Admin</p>
+                <h5 class="member__name">Shekhar Singh</h5>
+                <p class="member__desc">Head & CEO – Russia Operations</p>
+              </div><!-- /.member-info -->
+            </div><!-- /.member -->
+          </div><!-- /.col-lg-4 -->
+          <!-- Member #1 -->
+          <div class="col-sm-6 col-md-4 col-lg-4">
+            <div class="member">
+              <div class="member__img">
+                <img src="assets/img/team/Chandrasekaran.jpg" alt="member img">
+                <div class="member__hover">
+                  <div class="member__content-inner">
+                  </div><!-- /.member-content-inner -->
+                </div><!-- /.member-hover -->
+              </div><!-- /.member-img -->
+              <div class="member__info">
+                <h5 class="member__name">Dr. K. Chandrasekaran</h5>
+                <p class="member__desc">Head - Business Development</p>
               </div><!-- /.member-info -->
             </div><!-- /.member -->
           </div><!-- /.col-lg-4 -->
           <!-- Member #3 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-4">
             <div class="member">
               <div class="member__img">
                 <img src="assets/img/team/arun.jpg" alt="member img">
@@ -289,24 +253,8 @@
               </div><!-- /.member-info -->
             </div><!-- /.member -->
           </div><!-- /.col-lg-4 -->
-          <!-- Member #4 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="member">
-              <div class="member__img">
-                <img src="assets/img/team/ashok.jpg" alt="member img">
-                <div class="member__hover">
-                  <div class="member__content-inner">
-                  </div><!-- /.member-content-inner -->
-                </div><!-- /.member-hover -->
-              </div><!-- /.member-img -->
-              <div class="member__info">
-                <h5 class="member__name">Ashok Moodbidri</h5>
-                <p class="member__desc">Materials Head</p>
-              </div><!-- /.member-info -->
-            </div><!-- /.member -->
-          </div><!-- /.col-lg-4 -->
           <!-- Member #5 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-4">
             <div class="member">
               <div class="member__img">
                 <img src="assets/img/team/dixit.jpg" alt="member img">
@@ -321,23 +269,7 @@
               </div><!-- /.member-info -->
             </div><!-- /.member -->
           </div><!-- /.col-lg-4 -->
-          <!-- Member #6 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="member">
-              <div class="member__img">
-                <img src="assets/img/team/dr.a.g.jpg" alt="member img">
-                <div class="member__hover">
-                  <div class="member__content-inner">
-                  </div><!-- /.member-content-inner -->
-                </div><!-- /.member-hover -->
-              </div><!-- /.member-img -->
-              <div class="member__info">
-                <h5 class="member__name">Dr. A.G. Seshadrinathan  </h5>
-                <p class="member__desc">Head  - Technical & Futuristic Planning</p>
-              </div><!-- /.member-info -->
-            </div><!-- /.member -->
-          </div><!-- /.col-lg-4 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
+          <div class="col-sm-6 col-md-4 col-lg-4">
             <div class="member">
               <div class="member__img">
                 <img src="assets/img/team/kishore.jpg" alt="member img">
@@ -352,7 +284,23 @@
               </div><!-- /.member-info -->
             </div><!-- /.member -->
           </div><!-- /.col-lg-4 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
+          <!-- Member #1 -->
+          <div class="col-sm-6 col-md-4 col-lg-4">
+            <div class="member">
+              <div class="member__img">
+                <img src="assets/img/team/Avinash.jpg" alt="member img">
+                <div class="member__hover">
+                  <div class="member__content-inner">
+                  </div><!-- /.member-content-inner -->
+                </div><!-- /.member-hover -->
+              </div><!-- /.member-img -->
+              <div class="member__info">
+                <h5 class="member__name">Avanish Sharma</h5>
+                <p class="member__desc">Head- Emerging & ROW Markets</p>
+              </div><!-- /.member-info -->
+            </div><!-- /.member -->
+          </div><!-- /.col-lg-4 -->
+          <div class="col-sm-6 col-md-4 col-lg-4">
             <div class="member">
               <div class="member__img">
                 <img src="assets/img/team/lakhinesh.jpg" alt="member img">
@@ -367,7 +315,74 @@
               </div><!-- /.member-info -->
             </div><!-- /.member -->
           </div><!-- /.col-lg-4 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
+
+        </div>
+
+        <div class="row text-center">
+          <!-- Member #1 -->
+          <div class="col-sm-6 col-md-4 col-lg-4">
+            <div class="member">
+              <div class="member__img">
+                <img src="assets/img/team/akhilesh.jpg" alt="member img">
+                <div class="member__hover">
+                  <div class="member__content-inner">
+                  </div><!-- /.member-content-inner -->
+                </div><!-- /.member-hover -->
+              </div><!-- /.member-img -->
+              <div class="member__info">
+                <h5 class="member__name">Mr. Akhilesh Jain</h5>
+                <p class="member__desc">Head, Corporte Affairs</p>
+              </div><!-- /.member-info -->
+            </div><!-- /.member -->
+          </div><!-- /.col-lg-4 -->
+          <!-- Member #4 -->
+          <div class="col-sm-6 col-md-4 col-lg-4">
+            <div class="member">
+              <div class="member__img">
+                <img src="assets/img/team/ashok.jpg" alt="member img">
+                <div class="member__hover">
+                  <div class="member__content-inner">
+                  </div><!-- /.member-content-inner -->
+                </div><!-- /.member-hover -->
+              </div><!-- /.member-img -->
+              <div class="member__info">
+                <h5 class="member__name">Ashok Moodbidri</h5>
+                <p class="member__desc">Materials Head</p>
+              </div><!-- /.member-info -->
+            </div><!-- /.member -->
+          </div><!-- /.col-lg-4 -->
+          <!-- Member #6 -->
+          <div class="col-sm-6 col-md-4 col-lg-4">
+            <div class="member">
+              <div class="member__img">
+                <img src="assets/img/team/dr.a.g.jpg" alt="member img">
+                <div class="member__hover">
+                  <div class="member__content-inner">
+                  </div><!-- /.member-content-inner -->
+                </div><!-- /.member-hover -->
+              </div><!-- /.member-img -->
+              <div class="member__info">
+                <h5 class="member__name">Dr. A.G. Seshadrinathan  </h5>
+                <p class="member__desc">Head  - Technical & Futuristic Planning</p>
+              </div><!-- /.member-info -->
+            </div><!-- /.member -->
+          </div><!-- /.col-lg-4 -->
+          <div class="col-sm-6 col-md-4 col-lg-4">
+            <div class="member">
+              <div class="member__img">
+                <img src="assets/img/team/Neeraj.jpg" alt="member img">
+                <div class="member__hover">
+                  <div class="member__content-inner">
+                  </div><!-- /.member-content-inner -->
+                </div><!-- /.member-hover -->
+              </div><!-- /.member-img -->
+              <div class="member__info">
+                <h5 class="member__name">Neeraj Singh</h5>
+                <p class="member__desc">Plant Head – Roorkee Site</p>
+              </div><!-- /.member-info -->
+            </div><!-- /.member -->
+          </div><!-- /.col-lg-4 -->
+          <div class="col-sm-6 col-md-4 col-lg-4">
             <div class="member">
               <div class="member__img">
                 <img src="assets/img/team/manoj.jpg" alt="member img">
@@ -383,48 +398,19 @@
               </div><!-- /.member-info -->
             </div><!-- /.member -->
           </div><!-- /.col-lg-4 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
+          <!-- Member #2 -->
+          <div class="col-sm-6 col-md-4 col-lg-4">
             <div class="member">
               <div class="member__img">
-                <img src="assets/img/team/Neeraj.jpg" alt="member img">
+                <img src="assets/img/team/anil.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
               <div class="member__info">
-                <h5 class="member__name">Neeraj Singh</h5>
-                <p class="member__desc">Plant Head – Roorkee Site</p>
-              </div><!-- /.member-info -->
-            </div><!-- /.member -->
-          </div><!-- /.col-lg-4 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="member">
-              <div class="member__img">
-                <img src="assets/img/team/saul.jpg" alt="member img">
-                <div class="member__hover">
-                  <div class="member__content-inner">
-                  </div><!-- /.member-content-inner -->
-                </div><!-- /.member-hover -->
-              </div><!-- /.member-img -->
-              <div class="member__info">
-                <h5 class="member__name">Marian Chris</h5>
-                <p class="member__desc">Global Sales</p>
-              </div><!-- /.member-info -->
-            </div><!-- /.member -->
-          </div><!-- /.col-lg-4 -->
-          <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="member">
-              <div class="member__img">
-                <img src="assets/img/team/vikas.jpg" alt="member img">
-                <div class="member__hover">
-                  <div class="member__content-inner">
-                  </div><!-- /.member-content-inner -->
-                </div><!-- /.member-hover -->
-              </div><!-- /.member-img -->
-              <div class="member__info">
-                <h5 class="member__name">Mr. Vikas Shelke</h5>
-                <p class="member__desc">Small volume Parental unit, Aurangabad</p>
+                <h5 class="member__name">Mr. Anil Kumar Mishra </h5>
+                <p class="member__desc">Head, HR & Admin</p>
               </div><!-- /.member-info -->
             </div><!-- /.member -->
           </div><!-- /.col-lg-4 -->
