--- a/manufacture.html
+++ b/manufacture.html
@@ -123,11 +123,9 @@
             <div class="inner-padding">
               <div class="heading heading-2 mb-50">
                 <h2 class="heading__title color-white">Manufacturing Capabilities at Shreya Life Sciences</h2>
-                <p class="heading__desc color-white">Our golden rule: Ensuring quality at every step. <br>
-                  At Shreya Life Science, we believe in innovation and excellence. We take pride in manufacturing a wide
-                  range of products with precision. Our strong armoury of manufacturing capabilities including two
-                  state-of-the-art manufacturing units built as per the requirement of international regulatory bodies (Remove – USFDA , UKMHRA & EU), a strong research services and efficient contract manufacturing. We are committed to
-                  providing products and services with one thing in common - Quality</p>
+                <p class="heading__desc color-white">Our golden rule: Ensur quality at every step.
+                   Shreya Life Sciences, believe in innovation and excellence. SHREYA takes pride in manufacturing a wide range of products with precision. The strong armoury of manufacturing capabilities include ing two state-of-the-art manufacturing units built as per the requirement of international regulatory bodies a strong research services and efficient manufacturing. Also has obtained PICS approval to one of its oral solid manufacturing unit, SHREYA is committed to providing products and services with one thing in common - Quality
+                  </p>
               </div><!-- /.heading -->
             </div>
           </div><!-- /.col-lg-6 -->
@@ -158,15 +156,24 @@
             <div class="case-single-item">
               <div class="text__block">
                 <h5 class="text__block-title">Aurangabad Manufacturing Unit</h5>
-                <p class="text__block-desc">Home to the majestic Ajanta & Ellora caves, this Aurangabad plant
-                  established in (year) is the manufacturing hub for Shreya Life Sciences.
-                  <div class="list-style pt-20">
-                    <ul>
-                      <li><i class="fa fa-chevron-right"></i><p>It is certified by the World Health Organization (WHO) for Bulk, Sterile & Oral Solid Products.</p></li>
-                      <li><i class="fa fa-chevron-right"></i><p>It is certified by the Russian GMP</p></li>
-                      <li><i class="fa fa-chevron-right"></i><p>It is built as per USFDA & other International Organizations requirements </p></li>
-                    </ul>
-                    </div>
+                <p class="text__block-desc">Home to the majestic Ajanta & Ellora caves, this Aurangabad also has one of the two manufacturing bases of SHREYA.</p>
+                <div class="list-style pt-20">
+                  <ul>
+                    <li><i class="fa fa-chevron-right"></i>
+                      <p>It is certified by the World Health Organization (WHO) for Bulk, Sterile & Oral Solid Products.
+                      </p>
+                    </li>
+                    <li><i class="fa fa-chevron-right"></i>
+                      <p>It is also certified by the Russian GMP</p>
+                    </li>
+                    <li><i class="fa fa-chevron-right"></i>
+                      <p>It is built as per USFDA & other International Organizations requirements </p>
+                    </li>
+                    <li><i class="fa fa-chevron-right"></i>
+                      <p>Oral solid manufacturing set up over here has PICS approval as well</p>
+                    </li>
+                  </ul>
+                </div>
                 </p>
               </div><!-- /.text-block -->
             </div><!-- /.case-single-item -->
@@ -189,39 +196,39 @@
         <div class="col-container">
           <div class="col-style">
             <div class="widget__content">
-              <h5>Our Proprietary <br>Technology </h5>
+              <h5>Proprietary <br>Technology </h5>
               <ul>
-                <li>Human Grade Iron-Dextran & Dextran-40 K dalton Dextran bulk produced as API & use it for inhouse
+                <li>Human Grade Iron-Dextran & Dextran-40 K dalton Dextran bulk produced as API & use for inhouse
                   production of Iron Dextran (Imferon inj.) & Dextran 40 (Rallidex inj.)</li>
-                <li>Hyaluronidase From extraction to finished sterile injection (Ovine based) Hynidase brand</li>
+                <li>Hyaluronidase From extraction to finished sterile injection (Ovine based) under the brand Hynidase is manufactured here</li>
               </ul>
-          </div>
-        </div>
-
-          <div class="col-style">
-              <div class="widget__content">
-                <h5>Our facility is equipped to produce | Our Products (combining both)</h5>
-                <ul>
-                  <li>Small volume Parenterals (both Vials & Ampoules) Iron Dextran, Vitamin B Complex, Gentamicin &
-                    Quinine etc.</li>
-                  <li>rDNA Human Insulin Vials 100IU/ml & 40IU/ml 10 ml vials as Regular, Neutral (NPH) & Biphasic
-                    (Premix) – Recosulin</li>
-                  <li>Oral solid formulations (Tablets & Capsules)</li>
-                </ul>
             </div>
           </div>
 
           <div class="col-style">
-              <div class="widget__content">
-                <h5>Installed Capacity<br> <span> (Production Per shift per month)</span></h5>
-                <div class="box-list-style">
+            <div class="widget__content">
+              <h5>Our facility is equipped to produce | Our Products (combining both)</h5>
+              <ul>
+                <li>Small volume Parenterals (both Vials & Ampoules) Iron Dextran, Vitamin B Complex, Gentamicin &
+                  Quinine etc.</li>
+                <li>rDNA Human Insulin Vials 100IU/ml & 40IU/ml 10 ml vials as Regular, Neutral (NPH) & Biphasic
+                  (Premix) – Recosulin</li>
+                <li>Oral solid formulations (Tablets & Capsules)</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-style">
+            <div class="widget__content">
+              <h5>Installed Capacity<br> <span> (Production Per shift per month)</span></h5>
+              <div class="box-list-style">
                 <ul>
                   <li>3 Million Vials / Ampoules</li>
                   <li>400,000 Units Insulin</li>
                   <li>35 Million Tablets</li>
                   <li>10 Million Capsules</li>
                 </ul>
-                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -271,10 +278,9 @@
                 <p class="text__block-desc">Roorkee, known for Asia’s oldest Engineering College (Thompson College, now
                   an IIT) and home to the oldest army cantonment is the second centre for Shreya Life Sciences’
                   production unit. <br>
-                  Established in 2008, this plant too is certified by WHO for Bulk, Sterile & Oral Solid Products. It is
-                  also certified by GMP. <br>
-                  Commissioned as per the guidelines of US FDA & UK MHRA (MCA), the unit caters to all domestic and
-                  export requirements. <br>
+                  Established in 2008, this plant too is certified by WHO for Sterile dry powder cephalosporin
+                  injection, Oral Solid Products and lozenges . It is also certified by GMP.
+                  and built as per the guidelines international requirements.<br>
                   The Roorkee production plant has a separate manufacturing block for each product category. Soon, this
                   plant is also set to have a state-of-the-art Insulin formulation unit.
                 </p>
