--- a/r&d.html
+++ b/r&d.html
@@ -143,7 +143,7 @@
               <div class="case-single-item">
                 <div class="heading heading-2 mb-50">
                     <h2 class="heading__title color-black">Research & Development</h2>
-                    <p class="heading__desc color-black">Shreya Life Sciences boasts of a premium research and development facility at the Aurangabad Plant. It has the capability to develop formulations at the lab level, scaling them to commercial batches until validation. <br><br> With an extensive experience of Preclinical & Clinical studies by our scientists, we have been pioneering the development of drugs for a very long time.
+                    <p class="heading__desc color-black">Shreya Life Sciences boasts of a premium research and development facility at the Aurangabad Plant. It has the capability to develop formulations at the lab scale, scaling them upto commercial batches through Pilot scale until validation. <br><br> SHREYA has an extensive experience of Preclinical & Clinical studies.
                     </p>
                   </div><!-- /.heading -->
                   <!-- <div class="row">
@@ -176,7 +176,7 @@
                       </div><!-- /.accordion-item-header -->
                       <div id="collapse1" class="collapse show" data-parent="#accordion">
                         <div class="accordion__item-body">
-                          <p>A spreading factor that enhances the effect of local anaesthesia, it has wide clinical applications, especially cataract surgery. The source of our Hynidase is ovine compared to bovine originating products in the market, thus being free of TSE/BSE infections.</p>
+                          <p>A spreading factor that enhances the effect of local anaesthesia. It has wide clinical applications, especially in cataract surgery. The source of our Hynidase is ovine compared to other bovine origin products thus being free of TSE/BSE infections.</p>
                         </div><!-- /.accordion-item-body -->
                       </div>
                     </div><!-- /.accordion-item -->
@@ -186,7 +186,8 @@
                       </div><!-- /.accordion-item-header -->
                       <div id="collapse2" class="collapse" data-parent="#accordion">
                         <div class="accordion__item-body">
-                          <p>We have a dedicated Insulin Formulation Facility that formulates both 40 IU & 100 IU insulin. Our insulin products are created in regular, NPH, 30/70 and 50/50 varieties.</p>
+                          <p>SHREYA has a dedicated Insulin Formulation Facility.
+                            Shreya currently  that formulates both 40 IU & 100 IU insulin in 10 ml vials . Insulin variants manufactured are Regular, NPH (Neutral) and Premixed (30/70).</p>
                         </div><!-- /.accordion-item-body -->
                       </div>
                     </div><!-- /.accordion-item -->
@@ -206,7 +207,7 @@
                       </div><!-- /.accordion-item-header -->
                       <div id="collapse4" class="collapse" data-parent="#accordion">
                         <div class="accordion__item-body">
-                          <p>Formulations of Salmon Calcitonins are created in the forms of injections and nasal spray for treating osteoporosis.</p>
+                          <p>Formulations of Salmon Calcitonins are produced injections and nasal spray for treating osteoporosis.</p>
                         </div><!-- /.accordion-item-body -->
                       </div>
                     </div><!-- /.accordion-item -->
