--- a/we-work.html
+++ b/we-work.html
@@ -131,11 +131,11 @@
       <!-- ===========================
     fancybox Layout3
   ============================= -->
-  <section id="fancyboxLayout2" class="pt-60 section-small">
+  <section id="fancyboxLayout2" class="pt-60 pb-40">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-10 col-xl-4">
-              <div class="heading heading-3 mb-50">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+              <div class="heading mb-50">
                 <!-- <span class="heading__subtitle"></span> -->
                 <h2 class="heading__title">Domestic Sales & Marketing</h2>
               </div>
@@ -146,20 +146,19 @@
               <div class="heading heading-3 mb-50">
                 <!-- <span class="heading__subtitle"></span> -->
                 <!-- <h2 class="heading__title">Our Entire Scope of International Exports</h2> -->
-                <p class="heading__desc">At Shreya Life Science, we take pride in our extensive Sales and Marketing set up. At the domestic level, the Shreya Group markets through 3 separate SBUs.
+                <p class="heading__desc">At Shreya Life Science, there exists an extensive Sales and Marketing set up. At the domestic level, the Shreya Group markets through two separate SBUs.
                 </p>
                 <div class="list-style-2 pt-20">
                     <ul>
                         <li><i class="fa fa-chevron-right"></i><p> Amadeus </p></li>
-                        <li><i class="fa fa-chevron-right"></i><p> AkuCare </p></li>
-                        <li><i class="fa fa-chevron-right"></i><p> BioLife </p></li>
+                        <li><i class="fa fa-chevron-right"></i><p> AkuBio </p></li>
                     </ul>
                   </div>
               </div>
 
               <div class="heading heading-3 mb-50">
                 <!-- <span class="heading__subtitle"></span> -->
-                <p class="heading__desc">Our efficient fleet of field personnels collectively work in collaboration with over 200,000 doctors specialising in all major medical segments. These fields include:</p>
+                <p class="heading__desc">The fleet of field personnel collectively work in collaboration with over 200,000 doctors specialising in all major medical segments. These fields include:</p>
                 <div class="list-style-2 pt-20">
                     <ul>
                         <li><i class="fa fa-chevron-right"></i><p> General Medicine</p></li>
@@ -180,12 +179,12 @@
             <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <div class="heading heading-3 mb-50">
                     <!-- <span class="heading__subtitle"></span> -->
-                    <p class="heading__desc">Our marketing operations are handled by a dynamic fleet of over 1000 Sales & Marketing associates. Along with the extensive effort of our field personnels, we are equipped with a full-fledged back-end support system. This team comprises of the following:</p>
+                    <p class="heading__desc">The Marketing operations are handled by a dynamic fleet of over 1000 Sales & Marketing associates. Along with the extensive effort of field personnel, They are equipped with a full-fledged back-end support system. This team comprises of the following:</p>
                     <div class="list-style pt-20">
                         <ul>
-                            <li><i class="fa fa-chevron-right"></i><p>  Sales Management team at the Corporate and Regional level</p></li>
+                            <li><i class="fa fa-chevron-right"></i><p>  Sales Management team at the Corporate and Regional levels</p></li>
                             <li><i class="fa fa-chevron-right"></i><p> Marketing Management Team at Corporate level</p></li>
-                            <li><i class="fa fa-chevron-right"></i><p> Training Department both at the Corporate & Field level</p></li>
+                            <li><i class="fa fa-chevron-right"></i><p> Training Department both at the Corporate & Field levels</p></li>
                             <li><i class="fa fa-chevron-right"></i><p> Medical & Regulatory Cell</p></li>
                             <li><i class="fa fa-chevron-right"></i><p> Market Research</p></li>
                             <li><i class="fa fa-chevron-right"></i><p> InfoTech Department</p></li>
@@ -207,13 +206,15 @@
           <div class="col-sm-12 col-md-12 col-lg-6">
             <div class="heading mb-50">
               <!-- <span class="heading__subtitle">Services We Offer</span> -->
-              <h2 class="heading__title mb-30">Exports</h2>
-              <p class="heading__desc">At Shreya Life Sciences, our utmost priorities for exporting pharmaceutical products is driven by providing trusted, reliable, safe and high-quality products that improve the health and well-being of people. <br> We currently export a wide range of formulations and other pharma products to a multitude of countries across five continents. <br><br><b>Key highlights of our International Exports include:</b> <br><br></p>
+              <h2 class="heading__title mb-5">Exports</h2>
+              <p class="heading__desc">At Shreya Life Sciences, the utmost priorities for exporting pharmaceutical products are driven by providing trusted, reliable, safe and high-quality products to improve the health and well-being of Patients. <br>
+               Currently, SHREYA export a wide range of formulations to various countries across five continents.
+                <br><br><b>Key highlights of SHREYA’ International Exports include:</b> <br><br></p>
               <div class="list-style">
                   <ul>
-                      <li><i class="fa fa-chevron-right"></i><p> High export volumes to Russia & CIS Countries with Headquarters at Moscow, Russia.</p></li>
-                      <li><i class="fa fa-chevron-right"></i> <p>Export of in-house products to African and far-east countries.</p></li>
-                      <li><i class="fa fa-chevron-right"></i> <p>Many Shreya products are registered in these countries.</p></li>
+                      <li><i class="fa fa-chevron-right"></i><p> High export volumes to Russia & CIS Countries.</p></li>
+                      <li><i class="fa fa-chevron-right"></i><p> Export of in-house products to African and Far-East countries.</p></li>
+                      <li><i class="fa fa-chevron-right"></i> <p>Many Shreya’s products are either registered  or under registration in many of the countries.</p></li>
                   </ul>
                 </div>
             </div><!-- /.heading -->
@@ -249,8 +250,8 @@
   <section id="fancyboxLayout2" class="pt-0">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-10 col-xl-4">
-          <div class="heading heading-3 mb-50">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+          <div class="heading mb-50">
             <!-- <span class="heading__subtitle"></span> -->
             <h2 class="heading__title">Our Entire Scope of International Exports</h2>
           </div>
@@ -264,12 +265,12 @@
               <img src="assets/img/flags/russia.png" alt="">
             </div><!-- /.fancybox-icon -->
             <div class="fancybox__content">
-              <h4 class="fancybox__title">Russias</h4>
+              <h4 class="fancybox__title">Russia</h4>
               <p class="fancybox__desc">- Operations are set up across the country. <br>
-                  - Products are exported in both Prescription & OTC Segments. <br>
-                  - Over 55 products registered & marked by 160 field force Distribution through six nationally operating distributors. <br>
+                  - Products are exported for both Prescription & OTC Segments. <br>
+                  - Over 55 products are registered & marked by over 160 field force. <br>
                   - Caters to 25000 retail pharmacies (APTEKAS). <br>
-                  - Products distributed through the Public Distribution System of the Russian Govt.</p>
+                  - Products also distributed through the Public Distribution System of the Russian Govt.</p>
             </div><!-- /.fancybox-content -->
           </div><!-- /.fancybox-item -->
         </div><!-- /.col-lg-4 -->
@@ -281,10 +282,10 @@
             </div><!-- /.fancybox-icon -->
             <div class="fancybox__content">
               <h4 class="fancybox__title">Africa</h4>
-              <p class="fancybox__desc">- Shreya Life Sciences began operations in this continent through Ethiopia.<br>
+              <p class="fancybox__desc">- Shreya Life Sciences began operations in this continent through its first entry into  Ethiopia.<br>
                   - Current operations include Kenya, Uganda, DRC Congo & Ethiopia.<br>
                   - Approval to establish plants in Nigeria is currently under process.<br>
-                  - Our Lozenges is under registration in Morocco.</p>
+                  - Our Lozenges is under registration at Morocco.</p>
             </div><!-- /.fancybox-content -->
           </div><!-- /.fancybox-item -->
         </div><!-- /.col-lg-4 -->
@@ -336,7 +337,7 @@
             <div class="fancybox__content">
               <h4 class="fancybox__title">Myanmar</h4>
               <p class="fancybox__desc">- 24 products under the label of Shreya are registered.<br>
-                  - Contract Manufacturing with SUN Pharma for sale in Myanmar</p>
+                  - Contract Manufacturing for SUN Pharma for sale in Myanmar</p>
             </div><!-- /.fancybox-content -->
           </div><!-- /.fancybox-item -->
         </div><!-- /.col-lg-4 -->
@@ -365,13 +366,9 @@
           <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6 equal-height">
               <div class="inner-padding">
-                <div class="heading heading-2 mb-50">
+                <div class="heading  mb-50">
                   <h2 class="heading__title color-black">Contract Manufacturing:</h2>
-                  <p class="heading__desc color-black">Armed with more than 20+ years of industry expertise, we, at Shreya Life Science, collaborate with pharmaceutical marketing firms on a contract basis to produce and supply formulations, APIs and various medicinal drugs at scale. <br><br>
-                      Our state-of-the-art manufacturing facility is IRA approved while our new facilities are in the process of approval from the European Regulatory Body. <br><br>
-                      Currently, our illustrious portfolio of clients include globally recognised firms like Lupin, Sun Pharma, Cadila, Piramal and Glenmark among others. <br><br>
-                      Our international collaborations are lined up with companies from Ukraine, Ethiopia, and Zimbabwe.
-                      We welcome contract manufacturing enquiries from both, domestic and international clients. <br><br>
+                  <p class="heading__desc color-black">Armed with more than 20+ years of industry expertise, Shreya Life Science collaborates with Pharmaceutical Marketing firms for on a contract manufacture basis to produce and supply Formulations. <br><br> State-of-the-art manufacturing facility for oral solids at Aurangabad has PICS approval <br><br> Currently, illustrious portfolio of clients who have recognised SHREYA include globally recognised firms like Lupin Limited, Sun Pharmaceutical Industries Ltd , Cadila Pharmceuticals Ltd , Piramal Pharma, Glenmark Pharmaceuticals & others. <br><br>Shreya welcomes contract manufacturing enquiries from both, domestic and international clients.<br><br>
                       Kindly send your enquiries to: <a href="mailto:contractmanufacture@shreya.co.in">contractmanufacture@shreya.co.in</a>
                       </p>
                 </div><!-- /.heading -->
@@ -402,7 +399,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-7">
-                <div class="heading heading-3">
+                <div class="heading ">
                     <!-- <span class="heading__subtitle"></span> -->
                     <h2 class="heading__title">Licensing</h2>
                   </div>
@@ -410,8 +407,8 @@
                 <p class="heading__desc">Partnership and collaboration lie at the heart of Shreya Life Sciences’ business development policy. We practise both In-Licensing and Out-Licensing to expand our business in India and the overseas market. We, with our robust marketing infrastructure in India and Russia are open to prospective collaboration opportunities. </p>
               </div><!-- /.heading -->
 
-              <div class="heading heading-3">
-                <!-- <span class="heading__subtitle"></span> -->
+              <!-- <div class="heading">
+                <span class="heading__subtitle"></span>
                 <h2 class="heading__title">In-Licensing</h2>
               </div>
                 <div class="heading mb-20">
@@ -429,7 +426,8 @@
                             <li><i class="fa fa-chevron-right"></i><p>Anti Biotics</p></li>
                         </ul>
                       </div>
-                </div><!-- /.heading -->
+                </div> -->
+                <!-- /.heading -->
             </div><!-- /.col-lg-5 -->
             <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-0">
                 <div class="about__img mb-60">
@@ -455,7 +453,7 @@
                       </div><!-- /.about-img -->
                 </div>
                 <div class="col-sm-12 col-md-7 col-lg-7 col-xl-7">
-                    <div class="heading heading-3 mb-50">
+                    <div class="heading mb-50">
                         <!-- <span class="heading__subtitle"></span> -->
                         <h2 class="heading__title">Out – Licensing</h2>
                         <p class="heading__desc">Our current projects include marketing our products in Russia and CIS countries along with some Asia Pacific markets. We focus on proprietary products and speciality products primarily in the following fields:</p>
